# CryptTool

./: .gitignore  CMakeLists.txt  README.md
cryptlib/: README.md  cript-permutation.h  criptlib.h  crypt-components.h  crypt-permutation.c  crypt-permutation.h  crypt-translate.c  crypt-translate.h  cryptlib-components.c  cryptlib-io.c  cryptlib-io.h  cryptlib-osHandling.c  cryptlib-osHandling.h  cryptlib.c  cryptlib.h
src/: CMakeLists.txt  README.md  driveSelector.c  driveSelector.h  functions.h  main.c  main.h
tests/: CMakeLists.txt  cryptIo_test.c  cryptlib-components-test.c  cryptlib-implementation-test.c  cryptlib-implementation-test.h  cryptlib_test.c  driveSelectorTests.c
