add_executable(main main.c driveSelector.h driveSelector.c ../cryptlib/cryptlib-io.h ../cryptlib/cryptlib-io.c ../cryptlib/cryptlib.h ../cryptlib/cryptlib.c ../cryptlib/crypt-translate.c ../cryptlib/crypt-translate.h ../cryptlib/cryptlib-components.c ../cryptlib/crypt-components.h ../cryptlib/crypt-permutation.c)
